[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asv_env_pixi"
version = "0.2.0"
description = "ASV environment backend for environment_type=pixi (pixi CLI workspaces)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = ["asv>=0.6.5"]

[project.entry-points."asv.environment_backends"]
pixi = "asv_env_pixi:Pixi"

[project.entry-points."asv.plugins"]
pixi = "asv_env_pixi:Pixi"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["asv_env_pixi*"]
